--- a/extension-libs/sequelize/package.json
+++ b/extension-libs/sequelize/package.json
@@ -16,6 +16,7 @@
     "connect-timeout": "^1.9.0",
     "cookie-parser": "^1.4.6",
     "express": "^4.17.2",
+    "joi": "^17.5.0",
     "morgan": "^1.10.0",
     "mysql2": "^2.3.3",
     "require-dir": "^1.2.0",
