--- a/extension-libs/kafka-node/package.json
+++ b/extension-libs/kafka-node/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "debug": "DEBUG=kafka-node:* nodemon server.js"
   },
   "author": "",
   "license": "ISC",
@@ -12,5 +12,9 @@
     "config": "^3.3.6",
     "kafka-node": "^5.0.0",
     "lodash": "^4.17.21"
+  },
+  "devDependencies": {
+    "debug": "^4.3.3",
+    "nodemon": "^2.0.15"
   }
 }
