--- a/extension-libs/http-proxy-middleware/proxy-samples-ts/package.json
+++ b/extension-libs/http-proxy-middleware/proxy-samples-ts/package.json
@@ -9,6 +9,10 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "express": "^4.17.3",
     "http-proxy-middleware": "^2.0.3"
+  },
+  "devDependencies": {
+    "@types/express": "^4.17.13"
   }
 }
