--- a/templates/custom-proxy/package.json
+++ b/templates/custom-proxy/package.json
@@ -14,8 +14,10 @@
     "config": "^3.3.7",
     "cookie-parser": "^1.4.6",
     "express": "^4.17.3",
+    "formidable": "^2.0.1",
     "helmet": "^5.0.2",
     "lodash": "^4.17.21",
+    "request": "^2.88.2",
     "request-promise": "^4.2.6"
   },
   "devDependencies": {
